--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ header {
 
 .bold {
   font-weight: bold;
+  color: #ffae00;
+}
+
+.js {
+  color: #ffae00;
 }
 
 h1 {
@@ -42,6 +47,11 @@ h1 {
 .test-text {
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.7);
+}
+
+.test-text p {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .flex {
@@ -86,7 +96,7 @@ h1 {
 }
 
 .description {
-  width: 100%;
+  width: 70%;
   margin: 100px auto;
 }
 
@@ -104,9 +114,20 @@ h1 {
   background-color: black;
 }
 
+.title {
+  font-size: 30px;
+  text-align: center;
+}
+
+ul {
+  margin-left: 100px;
+  font-size: 20px;
+}
+
 footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  margin-bottom: 60px;
 }
