--- a/style.css
+++ b/style.css
@@ -33,70 +33,10 @@ h1 {
   font-weight: normal;
 }
 
-.test {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 100%;
-  height: 600px;
-
-  font-size: 16px;
-}
-
-.test-text {
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-.test-text p {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.flex {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 900px;
-  height: 600px;
-  margin: 0 auto;
-}
-
-.test3 {
-  width: 49%;
-}
-
-.test4 {
-  width: 49%;
-}
-
-.string {
-  color: green;
-}
-
-.method {
-  color: blue;
-}
-
-.num {
-  color: orange;
-}
-
-.tab1 {
-  margin-left: 15px;
-}
-
-.tab2 {
-  margin-left: 30px;
-}
-
-.tab3 {
-  margin-left: 45px;
-}
-
 .description {
-  width: 70%;
+  position: relative;
+  width: 75%;
+  height: 400px;
   margin: 100px auto;
 }
 
@@ -132,7 +72,36 @@ footer {
   margin-bottom: 100px;
 }
 
-.fix-test {
-	width: 800px;
-	height: 600px;
+.fixed {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 100px;
+  font-size: 20px;
+}
+
+.dead {
+  top: 20px;
+  left: 0;
+  background-color: lightgrey;
+}
+
+.simple {
+  top: 50px;
+  left: 200px;
+  background-color: #ffae00;
+}
+
+.parallax {
+  top: 20px;
+  left: 400px;
+  background-color: lightgrey;
+}
+
+.scrolling {
+  top: 50px;
+  left: 600px;
+  background-color: #ffae00;
 }
