--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
   align-items: center;
 
   margin-top: 30px;
+  padding-bottom: 10px;
 }
 
 .bold {
@@ -74,34 +75,32 @@ footer {
 
 .fixed {
   position: absolute;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 150px;
   height: 100px;
   font-size: 20px;
+  border-radius: 10px;
 }
 
 .dead {
-  top: 20px;
   left: 0;
   background-color: lightgrey;
 }
 
 .simple {
-  top: 50px;
   left: 200px;
   background-color: #ffae00;
 }
 
 .parallax {
-  top: 20px;
   left: 400px;
   background-color: lightgrey;
 }
 
 .scrolling {
-  top: 50px;
   left: 600px;
   background-color: #ffae00;
 }
