--- a/style.css
+++ b/style.css
@@ -41,6 +41,19 @@ h1 {
   margin: 100px auto;
 }
 
+.intro {
+  position: relative;
+  width: 60%;
+  height: 50px;
+  margin: 80px auto;
+  font-size: 20px;
+}
+
+.firstblock {
+  height: 700px;
+  margin-top: 130px;
+}
+
 .github {
   padding: 10px 15px;
   font-size: 18px;
@@ -85,9 +98,28 @@ footer {
   border-radius: 10px;
 }
 
+.description-tips {
+  height: auto;
+}
+
+.description-image {
+  width: 85%;
+  height: auto;
+}
+
+.description-final {
+  height: 200px;
+}
+
+.container {
+  width: 100%;
+  height: 600px;
+  overflow: hidden;
+}
+
 .dead {
   left: 0;
-  background-color: lightgrey;
+  background-color: rgba(211,211,211,0.5);;
 }
 
 .simple {
@@ -97,10 +129,37 @@ footer {
 
 .parallax {
   left: 400px;
-  background-color: lightgrey;
+  background-color: rgba(211,211,211,0.5);;
 }
 
 .scrolling {
   left: 600px;
   background-color: #ffae00;
+}
+
+.comment {
+  color: grey;
+}
+
+.var {
+  color: blue;
+}
+
+.method {
+  color: goldenrod;
+}
+
+.string, .int {
+  color: green;
+}
+
+.array {
+  color: blue;
+}
+
+.code {
+  font-size: 16px;
+  height: auto;
+  padding: 40px;
+  background-color: rgba(211,211,211,0.5);
 }
